# cloud-app

./: .env  back.env  docker-compose.yml
back/: Cargo.toml  Dockerfile.sqlx  openapi.yaml
back/migrations/: create_users.sql  migrate.sh
back/src/: errors.rs  main.rs  shared.rs
back/src/auth/: auth_controller.rs  auth_extractor.rs  auth_models.rs  auth_service.rs  bearer_manager.rs  mod.rs
back/src/auth/auth_models/: auth_state.rs  cache_key.rs  claims.rs  credential.rs  internal_user_claim.rs  mod.rs  refresh_token.rs  reset_password.rs  token.rs  verify.rs
back/src/constants/: messages.rs
back/src/middlewares/: auth_middleware.rs
back/src/models/: auth_model.rs  user_model.rs
back/src/services/: auth_service.rs  mod.rs  openapi_service.rs
back/src/templates/: reset_password_email.html  verification_email.html
back/src/utils/: email_utils.rs  mod.rs  redis_utils.rs
front/: package-lock.json  package.json
front/.angular/cache/19.2.15/front/: .tsbuildinfo
front/.angular/cache/19.2.15/front/vite/deps_ssr/: _metadata.json
front/src/: App.tsx  main.ts
front/src/app/: app.component.html  app.component.ts  app.routes.ts
front/src/app/components/auth/: auth.component.html  auth.component.scss  auth.component.ts
front/src/app/components/login/: login.component.html  login.component.ts
front/src/app/components/verify/: verify.component.ts
front/src/app/services/: auth.service.ts  ping.service.ts
front/src/components/auth/: SignInForm.tsx  SignUpForm.tsx
front/src/constants/: messages.ts
front/src/pages/AuthPages/: Verify.tsx
front/src/services/: AuthServices.ts
nginx/: nginx.conf
nginx/certs/: cert.pem  key.pem
