[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = { version = "4.11.0", features = ["rustls"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
bb8 = "0.9.0"
bb8-redis = "0.24.0"
chrono = { version = "0.4.42", features = ["serde"] }
fancy-regex = "0.16.1"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.18", features = [
    "ring",
    "rustls",
    "rustls-platform-verifier",
] }
password-hash = "0.5.0"
redis = { version = "0.32.5", features = ["aio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
    "mysql",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "time",
] }
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["serde"] }
tokio = "1.47.1"
uuid = { version = "1.18.1", features = ["v4"] }
